examples/test/testpolicy11448.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11448
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key33: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value39
          key24: value48
          key13: value3
      podSelector:
        matchLabels:
          key24: value0
          key16: value6
